# counter-strike-2d-g17

./: .gitignore  CMakeLists.txt  README.md
client/: client.cpp  client.h  client_protocol.cpp  client_protocol.h  receiver.cpp  receiver.h  sender.cpp  sender.h  servererror.h  serversentincorrectmessage.h
client/lobby/: CMakeLists.txt  joingamewindow.cpp  joingamewindow.h  joingamewindow.ui  mainmenuwindow.cpp  mainmenuwindow.h  mainmenuwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  newgamewindow.cpp  newgamewindow.h  newgamewindow.ui  premenu.cpp  premenu.h  premenu.ui  waitingguestwindow.cpp  waitingguestwindow.h  waitingguestwindow.ui  waitinghostwindow.cpp  waitinghostwindow.h  waitinghostwindow.ui
common/: CMakeLists.txt  defs.h  event.cpp  event.h  protocol.cpp  protocol.h  prtrecvinvalidvalue.h  queue.h
server/: CMakeLists.txt  acceptor.cpp  acceptor.h  broadcast.cpp  broadcast.h  defs.h  game.cpp  game.h  game_action.cpp  game_action.h  gameloop.cpp  gameloop.h  main.cpp  onlineclient.cpp  onlineclient.h  receiver.cpp  receiver.h  sender.cpp  sender.h  server.cpp  server.h  server_protocol.cpp  server_protocol.h
server/errors/: gameinprogresserror.h
server/game/: armament.cpp  armament.h  bullet.h  cone.cpp  cone.h  defs.h  ellipse.cpp  ellipse.h  entity.cpp  entity.h  game.cpp  game.h  obb.cpp  obb.h  player.cpp  player.h  vector2.cpp  vector2.h  weapon.cpp  weapon.h
server/network/: acceptor.cpp  acceptor.h  broadcast.cpp  broadcast.h  lobby.cpp  lobby.h  onlineclient.cpp  onlineclient.h  receiver.cpp  receiver.h  sender.cpp  sender.h  (+4 more)
